app/static/css/custom.css
<style>
    html {
        font-family: verdana, sans-serif;
        font-size: 11px;
    }

    body {
        padding-left: 5px;
        padding-right: 5px;
    }

    #main-page {
        height: 100%
    }

    #page-content {
        height: 100%;
        margin-left: 30px;
        margin-right: 30px;
    }


    header {
    /*          height: 100;*/
        margin-bottom: 10;
    }

    #logo-img {
        display: block;
        margin: 5px 10px 15px 5px;
        box-sizing: border-box;
        line-height: 1;
        float: left;
    }


    p {
        font-size: 11px;
    }

    .ul-main {
        margin: 0;
        padding: 5;
        list-style: square;
        font-size: 11px;
    }

    .ul-inner {
        list-style-type: none;
    }
    .ul-inner> li {
        text-indent: -15px;
    }
    .ul-inner > li:before {
        content: "-";
        text-indent: -25px;
    }

    #feiten_info {
        align-self: right;
    }

    #info_txt {
        max-width: 650px;
    }

    .svg-content {
        display: inline-block;
        top: 0;
        left: 0;
        max-width: 300px;
        max-height: 300px;
    }

    .svg-hor-cont {
        display: inline-block;
        top: 0;
        left: 0;
        max-width: 600px;
        max-height: 600px;
    }

    #subsidieTable {
        font-family: verdana;
        font-size: 11px;
        overflow: scroll;
    }

    #subsidieTable th {
        background-color: black;
        color: white;
    }

    .check{
        display: inline;
        font-size: 11px;
        font-weight: 100;
    }

    label{
         display: block;
    }

    .bar {
      fill: #004699;
    }

    .axis {
      font: 1em sans-serif;
    }

    .axis path,
    .axis line {
      fill: none;
      stroke: #000;
      shape-rendering: crispEdges;
    }

    .x.axis path {
      display: none;
    }

    .y.axis.hor path{
        display: none;
        shape-rendering: crispEdges;
        font-size: 12px;
    }
    .x.axis.hor path{
        display: flex;
    }

    .bar.notshown {
        fill: grey;
    }

    #nav-bar {
        height: 38px;
        background-color: #333333;
        margin-bottom: 10px;
        padding: 0px;
    }

    .navigation-toggle {
        list-style: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
        padding: 0px 0px;
    }

    .navigation-toggle li {
        display: inline-block;
        width: 60px;
        height: 38px;
        text-align: center;
        box-sizing: border-box;
        padding: 8px;
    }

    .navigation-toggle a {
        display: block;
        text-decoration: none;
        color: whitesmoke;
        font-weight: 200;

    }

    .tab.active {
        background-color: red;
    }

    #feiten_selectie {
        align-content: flex-end;
    }

    #page-footer-main {
        height: 38px;
        background-color: #333333;
        margin-top: 20px;
        margin-bottom: 0px;
        padding: 0px;
    }

    #page-footer-content {

        background-color: gray;
        margin-bottom: 10px;
        padding: 0px;
        color: whitesmoke;
    }

    #page-footer-content a {
        color: whitesmoke;
    }

    .graph_text {
        margin-top: 20px;
        font-size: 11px;
    }

    .graph_text ul{
        margin: 0;
        padding: 5;
        list-style: square;
    }

    .graph-table {
        width: 100%;
        font-size: 11px;
        border-collapse: collapse; 
    }

    .graph-table table {
        width: 100%;
    }

    .graph-table td {
        font-size: 11px;
        padding: 3px;
        align-content: left;

    }

    .graph-table tr:nth-of-type(odd) { 
        background: #eee; 
    }

    #logo-Adam {
        margin: 5px;
        height: 90px;
        background-color: blue;
        background: url("../images/amsterdam-logo.png") top left no-repeat;
        background-size: 25px;
    }

    #logo-Adam a {
        display: block;
        color:  #F00000;
        font-size: 28px;
        line-height: 25px;
        text-decoration: none;
        font-weight: normal;
        margin-left: 20px;
        
    }

    #logo-Site {
        display: block;
        color: #F00000;
        font-size: 28px;
        line-height: 25px;
        padding-top: 5px;
        text-align: right;
    }

    #header-row {
        padding: 5px;  
    }

    #lijstFilter {
        padding-left: 0px;
    }

    .graph-head{
        border-bottom: 1px solid;
        border-bottom-color: grey;
        text-align: center;
        min-height: 42px;
    }
    .graph-head h3 {
        font-size: 18px;
    }

    .main_graph{
        max-width: 650px;
    }

    #loading {
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
       position: fixed;
       display: block;
       opacity: 0.7;
       background-color: #fff;
       z-index: 99;
       text-align: center;
    }

    #loading-image {
      position: absolute;
      top: 50%;
      left: 40%;
      z-index: 100;
    }

</style>

